--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/m-plus-rounded-1c": "^5.0.13",
     "framer-motion": "^11.3.4",
     "next": "^14.2.5",
     "react": "^18.3.1",
