--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/m-plus-rounded-1c": "^5.0.13",
+    "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.3.4",
     "next": "^14.2.5",
     "react": "^18.3.1",
